392 fix recommanded exercise when only 1 workout has been done (#396)
* fix: Tests

* clean: Adjust UI

* feat: Add time to workout.date

* feat: Sort exercises calendar

* clean: Create new record for calendar

* clean: Refacto create workout

* clean: Remove contraint not null reps