@@ -1,7 +1,8 @@
 package com.avernet.myworkoutapi.workout;
 
-import com.avernet.myworkoutapi.exception.ApiException;
 import com.avernet.myworkoutapi.error.ErrorCodeEnum;
+import com.avernet.myworkoutapi.exception.ApiException;
+import com.avernet.myworkoutapi.history.History;
 import com.avernet.myworkoutapi.history.HistoryEntity;
 import com.avernet.myworkoutapi.history.HistoryGroup;
 import com.avernet.myworkoutapi.history.HistoryMapper;
@@ -13,7 +14,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -32,33 +35,15 @@ public class WorkoutService {
 
 
     @Transactional
-    public Workout createWorkout(UserEntity userEntity, WorkoutRequest workoutRequest) {
-        WorkoutEntity workoutEntity = workoutMapper.toEntity(workoutRequest.workout());
+    public Workout createWorkout(UserEntity user, WorkoutRequest request) {
+        WorkoutEntity workoutEntity = resolveWorkout(user, request);
 
-        if (workoutRequest.workout().getMuscleGroup().id() != MuscleGroupEnum.CARDIO.getId()) {
-            // Do not create a workout if it already exists for the same user and muscle group on the same day
-            // Except cardio workout because it can be done multiple times a day with different exercises (e.g. running, cycling)
-            Optional<WorkoutEntity> existingWorkout = workoutRepository.findByUserIdAndMuscleGroupIdAndDate(
-                userEntity.getId(),
-                workoutRequest.workout().getMuscleGroup().id(),
-                workoutRequest.workout().getDate()
-            );
-            if (existingWorkout.isPresent()) {
-                workoutEntity = existingWorkout.get();
-            }
-        }
+        HistoryEntity history = createHistory(request, workoutEntity);
 
-        workoutEntity.setUser(userEntity);
-
-        HistoryEntity historyEntity = historyMapper.toEntity(workoutRequest.history());
-        historyEntity.setWorkout(workoutEntity);
-
-        if (workoutEntity.getHistories() == null) {
-            workoutEntity.setHistories(new ArrayList<>());
-        }
-        workoutEntity.getHistories().add(historyEntity);
+        addHistory(workoutEntity, history);
 
         workoutRepository.save(workoutEntity);
+
         return workoutMapper.toDto(workoutEntity);
     }
 
@@ -74,14 +59,21 @@ public class WorkoutService {
             .collect(Collectors.groupingBy(h -> h.getExercise().getId()))
             .values()
             .stream()
-            .map(historyList -> new HistoryGroup(
-                historyList.get(0).getExercise(),
-                historyList
+            .map(historyList -> {
+                historyList.sort(Comparator.comparing(History::getId));
+
+                return new HistoryGroup(
+                    historyList.getFirst().getExercise(),
+                    historyList
+                );
+            })
+            .sorted(Comparator.comparing(
+                historyGroup -> historyGroup.getHistories().getFirst().getId()
             ))
             .toList();
 
         return WorkoutGroupedHistories.builder()
-            .workout(workout)
+            .workoutSummary(new WorkoutSummary(workout.getId(), workout.getDate(), workout.getDuration()))
             .historyGroups(historyGroupList)
             .muscleGroup(workout.getMuscleGroup())
             .build();
@@ -89,12 +81,68 @@ public class WorkoutService {
 
     @Transactional(readOnly = true)
     public List<Workout> findByDate(UserEntity userEntity, String start, String end) {
-        List<WorkoutEntity> workoutEntityList = workoutRepository.findByUserIdAndDateBetween(userEntity.getId(), LocalDate.parse(start), LocalDate.parse(end));
+        List<WorkoutEntity> workoutEntityList = workoutRepository.findByUserIdAndDateBetween(
+            userEntity.getId(),
+            LocalDate.parse(start).atStartOfDay(),
+            LocalDate.parse(end).atStartOfDay()
+        );
         return workoutMapper.toDtoList(workoutEntityList);
     }
 
     @Transactional
     public void delete(UserEntity userEntity, Long id) {
         workoutRepository.deleteByIdAndUserId(id, userEntity.getId());
+    }
+
+
+    private WorkoutEntity resolveWorkout(UserEntity user, WorkoutRequest request) {
+        WorkoutEntity workoutEntity = workoutMapper.toEntity(request.workout());
+        workoutEntity.setUser(user);
+
+        if (isCardio(request)) {
+            return workoutEntity;
+        }
+
+        return findOrCreateWorkout(user, request, workoutEntity);
+    }
+
+    private boolean isCardio(WorkoutRequest request) {
+        return request.workout()
+            .getMuscleGroup()
+            .id()
+            .equals(MuscleGroupEnum.CARDIO.getId());
+    }
+
+    private WorkoutEntity findOrCreateWorkout(UserEntity user,WorkoutRequest request,WorkoutEntity newWorkout) {
+        LocalDate today = LocalDate.now();
+        LocalDateTime start = today.atStartOfDay();
+        LocalDateTime end = today.plusDays(1).atStartOfDay();
+
+        return workoutRepository
+            .findByUserIdAndMuscleGroupIdAndDateGreaterThanEqualAndDateLessThan(
+                user.getId(),
+                request.workout().getMuscleGroup().id(),
+                start,
+                end
+            )
+            .orElse(newWorkout);
+    }
+
+    private HistoryEntity createHistory(WorkoutRequest request, WorkoutEntity workout) {
+        HistoryEntity history = historyMapper.toEntity(request.history());
+        history.setWorkout(workout);
+
+        if (isCardio(request)) {
+            history.setUnilateral(false);
+        }
+
+        return history;
+    }
+
+    private void addHistory(WorkoutEntity workout, HistoryEntity history) {
+        if (workout.getHistories() == null) {
+            workout.setHistories(new ArrayList<>());
+        }
+        workout.getHistories().add(history);
     }
 }
